syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.brekhin.ticket.grpc.model";

message GTicket {
    int64 ticketId = 1;
    int64 sessionId = 2;
    int32 col = 3;
    int32 row = 4;
}